REGRESSION (r281771): ASSERTION FAILED: !m_deletionHasBegun under WebCore::Permissions::~Permissions() https://bugs.webkit.org/show_bug.cgi?id=229714 <rdar://problem/82581552>

Reviewed by Chris Dumez.

Source/WebCore:

PageConfiguration should hold Ref<PermissionController> instead of UniqueRef.

* Modules/permissions/PermissionController.h:
* loader/EmptyClients.cpp:
(WebCore::pageConfigurationWithEmptyClients):
* page/Page.h:
* page/PageConfiguration.cpp:
(WebCore::PageConfiguration::PageConfiguration):
* page/PageConfiguration.h:

Source/WebKit:

* WebProcess/WebCoreSupport/WebPermissionController.cpp:
(WebKit::WebPermissionController::create):
* WebProcess/WebCoreSupport/WebPermissionController.h:
* WebProcess/WebPage/WebPage.cpp:
(WebKit::m_appHighlightsVisible):

Source/WebKitLegacy/mac:

* WebView/WebView.mm:
(-[WebView _commonInitializationWithFrameName:groupName:]):
(-[WebView initSimpleHTMLDocumentWithStyle:frame:preferences:groupName:]):

Source/WebKitLegacy/win:

* WebView.cpp:
(WebView::initWithFrame):


Canonical link: https://commits.webkit.org/241154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281818 268f45cc-cd09-0410-ab3c-d52691b4dbfc